--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,6 +18,7 @@
     <div id="root"></div>
 
     <!-- Dependencies -->
+    <script type="module"></script>
     <script src="../../node_modules/react/umd/react.development.js"></script>
     <script src="../..node_modules/react-dom/umd/react-dom.development.js"></script>
     <script crossorigin src="https://unpkg.com/react@15/dist/react.js"></script>
