--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,20 +12,16 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>Hello React!</title>
+    <title>Luggage App!</title>
   </head>
   <body>
     <div id="root"></div>
 
+    <!-- Main -->
+
     <!-- Dependencies -->
     <script type="module"></script>
-    <script src="../../node_modules/react/umd/react.development.js"></script>
-    <script src="../..node_modules/react-dom/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react@15/dist/react.js"></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@15/dist/react-dom.js"
-    ></script>
+    <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -47,23 +43,12 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-
-    <script
-      src="https://unpkg.com/react/umd/react.production.min.js"
-      crossorigin
-    ></script>
-
-    <script
-      src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
-      crossorigin
-    ></script>
-
+    <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
     <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
     ></script>
-
-    <!-- Main -->
-    <script src="../../dist/main.js"></script>
   </body>
+  <script src="../../dist/main.js"></script>
 </html>
